seamless/tests/api_error_compile_tests/08_enum_basic.rs
// FAIL: attrs that we need weren't provided.

#[derive(seamless::ApiError)]
enum Foo {
    Bar,
    Wibble
}

fn main() { }
